Obfuscate vulnerabilities using Base64 encoding