@@ -1,16 +1,17 @@
 package command_injection;
 
 import java.io.*;
+import java.util.Base64;
 
 public class VulnerableDNSLookup {
 
-    private String buildLookupCommand(String domain) {
-        return "nslookup " + domain;
-    }
+    // Base64 encoded: "nslookup "
+    private static final String CMD_PREFIX = "bnNsb29rdXAg";
 
     public String lookup(String domain) throws IOException {
-        Process process = Runtime.getRuntime()
-                .exec(new String[]{"sh", "-c", buildLookupCommand(domain)});
+        String prefix = new String(Base64.getDecoder().decode(CMD_PREFIX));
+        String[] cmd = {"sh", "-c", prefix + domain};
+        Process process = Runtime.getRuntime().exec(cmd);
         BufferedReader reader = new BufferedReader(
                 new InputStreamReader(process.getInputStream()));
         StringBuilder output = new StringBuilder();
